--- a/pom.xml
+++ b/pom.xml
@@ -1,55 +1,55 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.workshop</groupId>
-    <artifactId>RajinikanthDevOpsWorkshop</artifactId>
-    <version>1.0</version>
-    <packaging>war</packaging>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bamboo Class by Rajinikanth</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: #333;
+        }
 
-    <properties>
-        <!-- Specify your project's Java version here -->
-        <java.version>11</java.version>
-    </properties>
+        .class-info {
+            background-color: #3498db;
+            color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
 
-    <dependencies>
-        <!-- Servlet API -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
+        h1 {
+            font-size: 32px;
+            margin-bottom: 10px;
+        }
 
-        <!-- MySQL JDBC Driver -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version>
-        </dependency>
-    </dependencies>
+        p {
+            font-size: 18px;
+            margin: 10px 0;
+        }
 
-    <build>
-        <plugins>
-            <!-- Maven Compiler Plugin -->
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
+        .highlight {
+            color: #e74c3c;
+            font-weight: bold;
+        }
 
-            <!-- Maven WAR Plugin -->
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>
-                <configuration>
-                    <!-- If you have any specific configuration for the WAR plugin -->
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-</project>
+        .attractive-text {
+            background: linear-gradient(45deg, #3498db, #e74c3c);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            font-size: 24px;
+        }
+    </style>
+</head>
+<body>
+    <div class="class-info">
+        <h1>Welcome to the <span class="attractive-text">Bamboo Class</span></h1>
+        <p>By <span class="highlight">Rajinikanth</span></p>
+        <p>Trainer in <span class="highlight">DevOps, Cloud, ML-Ops, AI-Op</span></p>
+        <p>In colorful mode, HD, attractively presented</p>
+    </div>
+</body>
+</html>
